TEST_PROGRAMS/INVALID/serguei_nevarko/invalid1.min
#This program just prints the fraction 1/(2^n) in decimal form.

var message : string;

var fraction : float;

message = "The fraction is ";

#error here: cant declare anther variable
var counter : int;

counter = 8;
fraction = 1.0;

while counter do
  counter = counter-1;
  fraction = fraction/2;
  print message+fraction;
done


